--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -3,118 +3,143 @@
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
   <property name="windowModality">
-   <enum>Qt::NonModal</enum>
+   <enum>Qt::ApplicationModal</enum>
   </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>250</width>
-    <height>200</height>
+    <width>383</width>
+    <height>289</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>250</width>
-       <height>200</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>250</width>
-       <height>200</height>
-   </size>
-  </property>
-  <property name="baseSize">
-   <size>
-    <width>250</width>
-    <height>46</height>
-   </size>
-  </property>
   <property name="windowTitle">
    <string>Ceasar Chiffre</string>
   </property>
+  <property name="layoutDirection">
+   <enum>Qt::LeftToRight</enum>
+  </property>
+  <property name="dockOptions">
+   <set>QMainWindow::AllowTabbedDocks|QMainWindow::AnimatedDocks</set>
+  </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>235</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QSpinBox" name="shiftSpinBox">
-       <property name="autoFillBackground">
-        <bool>false</bool>
-       </property>
-       <property name="buttonSymbols">
-        <enum>QAbstractSpinBox::UpDownArrows</enum>
-       </property>
-       <property name="minimum">
-        <number>1</number>
-       </property>
-       <property name="maximum">
-        <number>26</number>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="inputEdit">
-       <property name="placeholderText">
-        <string>original Text</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-         <widget class="QLineEdit" name="outputEdit">
-             <property name="readOnly">
-                 <bool>true</bool>
-             </property>
-             <property name="placeholderText">
-                 <string>chiffrierter Text</string>
-             </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="1">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetMaximumSize</enum>
+      </property>
+      <property name="leftMargin">
+       <number>3</number>
+      </property>
+      <property name="topMargin">
+       <number>5</number>
+      </property>
+      <property name="rightMargin">
+       <number>3</number>
+      </property>
+      <property name="bottomMargin">
+       <number>5</number>
+      </property>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <property name="leftMargin">
+         <number>3</number>
+        </property>
+        <property name="topMargin">
+         <number>5</number>
+        </property>
+        <property name="rightMargin">
+         <number>3</number>
+        </property>
+        <property name="bottomMargin">
+         <number>5</number>
+        </property>
+        <item>
+         <widget class="QSpinBox" name="shiftSpinBox">
+          <property name="autoFillBackground">
+           <bool>false</bool>
+          </property>
+          <property name="buttonSymbols">
+           <enum>QAbstractSpinBox::UpDownArrows</enum>
+          </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>26</number>
+          </property>
          </widget>
-     </item>
-    </layout>
-   </widget>
-      <widget class="QLineEdit" name="bruteForceEdit">
-          <property name="geometry">
-              <rect>
-                  <x>10</x>
-                  <y>50</y>
-                  <width>231</width>
-                  <height>21</height>
-              </rect>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="inputEdit">
+          <property name="placeholderText">
+           <string>original Text</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="outputEdit">
+          <property name="readOnly">
+           <bool>true</bool>
           </property>
           <property name="placeholderText">
-              <string>Enter Caesar Chiffre</string>
+           <string>chiffrierter Text</string>
           </property>
-      </widget>
-      <widget class="QTextEdit" name="outputWindow">
-          <property name="enabled">
-              <bool>true</bool>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="encodeButton">
+          <property name="text">
+           <string>encode</string>
           </property>
-          <property name="geometry">
-              <rect>
-                  <x>10</x>
-                  <y>80</y>
-                  <width>231</width>
-                  <height>111</height>
-              </rect>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayoutbf">
+        <item>
+         <widget class="QLineEdit" name="bruteForceEdit">
+          <property name="placeholderText">
+           <string>Enter Caesar Chiffre</string>
           </property>
-          <property name="readOnly">
-              <bool>true</bool>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="bruteForceButton">
+          <property name="text">
+           <string>Bruteforce</string>
           </property>
-      </widget>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QTextEdit" name="outputWindow">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="font">
+         <font>
+          <family>Roboto</family>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
